{
    "name": "MapTouche",
    "maps": [
        {
            "name": "Controles",
            "id": "4f07ce60-ec7f-4395-8179-d826bdc42e11",
            "actions": [
                {
                    "name": "ToucheOnce",
                    "type": "Button",
                    "id": "9b2e62f8-4a6e-4255-9ccc-a4cf2c88cc22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoystickMovement",
                    "type": "Value",
                    "id": "65ef777c-8a27-4ca4-a731-297b23985c26",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a828ca3-e37e-4cb1-be16-366d2143c22c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToucheOnce",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b873b550-e88e-4aba-9625-88f4b7b80e91",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9362478b-3b5f-4ac2-b1ac-38ed41a62f1b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5498a3ad-7a8b-48c3-9ec6-52e65fd7bf02",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1829f67d-8d53-447d-bdcb-a37669c6eb09",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e1edc5fc-8061-4481-8bfe-45fb40c1abfc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}